# ForceEngine

./: .gitignore  CMakeLists.txt  Documentation.txt  readme.md  test_math.cpp
assets/models/: BetterSahur.fbx
assets/shaders/: shader.fs  shader.vs
include/: Camera.h  CameraComponent.h  ColliderComponent.h  Component.h  ComponentRegistry.h  Entity.h  FlapControllerComponent.h  Game.h  GameManagerComponent.h  LightComponent.h  LinearMovementComponent.h  Material.h  Mesh.h  Model.h  PhysicsComponent.h  PipeComponent.h  PrimitiveBuilder.h  Renderer.h  RendererComponent.h  ResourceManager.h  SceneLoader.h  Shader.h  SpinComponent.h  Texture.h
include/glad/: glad.h
shaders/: shader.fs  shader.vs
src/: Game.cpp  Renderer.cpp  ResourceManager.cpp  Shader.cpp  glad.c  main.cpp
tests/: repro_prop_update.cpp
